# ChangeLog for www-plugins/chrome-binary-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.163 2014/08/06 23:48:00 floppym Exp $

*chrome-binary-plugins-37.0.2062.68_beta1 (06 Aug 2014)
*chrome-binary-plugins-38.0.2114.2_alpha1 (06 Aug 2014)

  06 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.68_beta1.ebuild,
  +chrome-binary-plugins-38.0.2114.2_alpha1.ebuild,
  -chrome-binary-plugins-37.0.2062.58_beta1.ebuild,
  -chrome-binary-plugins-38.0.2107.3_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2107.3_alpha1 (02 Aug 2014)

  02 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2107.3_alpha1.ebuild,
  -chrome-binary-plugins-38.0.2107.2_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.58_beta1 (31 Jul 2014)
*chrome-binary-plugins-38.0.2107.2_alpha1 (31 Jul 2014)

  31 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.58_beta1.ebuild,
  +chrome-binary-plugins-38.0.2107.2_alpha1.ebuild,
  -chrome-binary-plugins-37.0.2062.44_beta1.ebuild,
  -chrome-binary-plugins-38.0.2101.0_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.44_beta1 (25 Jul 2014)

  25 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.44_beta1.ebuild,
  -chrome-binary-plugins-37.0.2062.35_beta1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.35_beta1 (24 Jul 2014)

  24 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.35_beta1.ebuild,
  -chrome-binary-plugins-37.0.2062.20_beta1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2101.0_alpha1 (22 Jul 2014)

  22 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2101.0_alpha1.ebuild,
  -chrome-binary-plugins-38.0.2096.0_alpha1.ebuild:
  Automated update.

  19 Jul 2014; Mike Gilbert <floppym@gentoo.org>