@@ -1,5 +1,5 @@
 DEFINED_PHASES=install nofetch unpack
-DESCRIPTION=Binary plugins -- native API Flash and PDF -- from Google Chrome for use in Chromium.
+DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
 EAPI=4
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash +pdf
@@ -10,4 +10,4 @@ RESTRICT=bindist mirror strip
 SLOT=stable
 SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_36.0.1985.125-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_36.0.1985.125-1_i386.deb )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=b669423685c59e0fdcfc0cd28cc9b63f
+_md5_=ffd49d66a3296d39327c2499e692c6ae
