@@ -1,5 +1,5 @@
 DEFINED_PHASES=install nofetch unpack
-DESCRIPTION=Binary plugins -- native API Flash and PDF -- from Google Chrome for use in Chromium.
+DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
 EAPI=4
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash
@@ -10,4 +10,4 @@ RESTRICT=bindist mirror strip
 SLOT=unstable
 SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_38.0.2114.2-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_38.0.2114.2-1_i386.deb )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=3b78f7ab4d903d1d914a748a5c68d0e4
+_md5_=62e16d43d9dfdb6714c8a69912001a33
