@@ -1,5 +1,5 @@
 DEFINED_PHASES=install unpack
-DESCRIPTION=Binary plugins -- native API Flash and PDF -- from Google Chrome for use in Chromium.
+DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
 EAPI=4
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash +pdf
@@ -8,4 +8,4 @@ RDEPEND=!www-plugins/chrome-binary-plugins:0 !www-plugins/chrome-binary-plugins:
 RESTRICT=bindist mirror strip
 SLOT=unstable
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=90d09697f6d00c33b1d6678db311b444
+_md5_=f609945540976c73343607e63a4b9945
